--- a/perceptron/perceptron.ipynb
+++ b/perceptron/perceptron.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![パーセプトロン](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/percep.svg)"
+    "![パーセプトロン](https://tanaka-tom.github.io/perceptron/percep.svg)"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "collapsed": true
    },
    "source": [
-    "![neuron](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/neuron.svg)"
+    "![neuron](https://tanaka-tom.github.io/perceptron/neuron.svg)"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![グラフ](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/graph.svg)"
+    "![グラフ](https://tanaka-tom.github.io/perceptron/graph.svg)"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![グラフ2](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/graph2.svg)"
+    "![グラフ2](https://tanaka-tom.github.io/perceptron/graph2.svg)"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![and or table](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/and_or_table.svg)"
+    "![and or table](https://tanaka-tom.github.io/perceptron/and_or_table.svg)"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![グラフ達](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/graphs.svg)"
+    "![グラフ達](https://tanaka-tom.github.io/perceptron/graphs.svg)"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![多層パーセプトロン](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/neuron2.svg)"
+    "![多層パーセプトロン](https://tanaka-tom.github.io/perceptron/neuron2.svg)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![xor](https://raw.githubusercontent.com/tanaka-tom/tanaka-tom.github.io/master/perceptron/xor.svg)"
+    "![xor](https://tanaka-tom.github.io/perceptron/xor.svg)"
    ]
   },
   {
