--- a/neural-network-1/neural-network-1.ipynb
+++ b/neural-network-1/neural-network-1.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ニューラルネットワーク](images/neural-network-1/neuron2.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-1/neuron2.svg)"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ニューラルネットワーク](images/neural-network-1/neural-network.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-1/neural-network.svg)"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ニューラルネットワーク](images/neural-network-1/neural-network2.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-1/neural-network2.svg)"
    ]
   },
   {
