--- a/neural-network-2/neural-network-2.ipynb
+++ b/neural-network-2/neural-network-2.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ニューラルネットワーク](images/neural-network-2/neural-network3.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-2/neural-network3.svg)"
    ]
   },
   {
@@ -36,7 +36,7 @@
     "collapsed": true
    },
    "source": [
-    "![ニューラルネットワーク](images/neural-network-2/sigma.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-2/sigma.svg)"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ニューラルネットワーク](images/neural-network-2/output-neuron.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-2/output-neuron.svg)"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ニューラルネットワーク](images/neural-network-2/neural-network3.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-2/neural-network3.svg)"
    ]
   }
  ],
