--- a/learning/learning.ipynb
+++ b/learning/learning.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ミニバッチ](images/learning/mini_batch.svg)"
+    "![ミニバッチ](https://tanaka-tom.github.io/learning/mini_batch.svg)"
    ]
   },
   {
