--- a/summary/summary.ipynb
+++ b/summary/summary.ipynb
@@ -53,8 +53,8 @@
     "## パーセプトロン実装\n",
     "- パーセプトロン\n",
     "- 論理回路を実装やシンプルなニューロンモデル\n",
-    "![パーセプトロン](images/perceptron/percep.svg)\n",
-    "![neuron](images/perceptron/neuron.svg)\n"
+    "![パーセプトロン](https://tanaka-tom.github.io/perceptron/percep.svg)\n",
+    "![neuron](https://tanaka-tom.github.io/perceptron/neuron.svg)\n"
    ]
   },
   {
@@ -68,9 +68,9 @@
     "- 活性化関数(Sigmoid, Step, ReLU)\n",
     "- 出力層(恒等関数、Softmax関数)\n",
     "- 学習済みのニューラルネットワークを用いてMNISTデータを識別\n",
-    "![ニューラルネットワーク](images/neural-network-1/neuron2.svg)\n",
-    "![ニューラルネットワーク](images/neural-network-2/sigma.svg)\n",
-    "![ニューラルネットワーク](images/neural-network-2/output-neuron.svg)"
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-1/neuron2.svg)\n",
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-2/sigma.svg)\n",
+    "![ニューラルネットワーク](https://tanaka-tom.github.io/neural-network-2/output-neuron.svg)"
    ]
   },
   {
@@ -92,8 +92,8 @@
     "- 計算グラフ\n",
     "- 順伝播、逆伝播\n",
     "- レイヤー化(Affine, Softmax with Loss)\n",
-    "![](images/backpropagation/computational-graph2-2.svg)\n",
-    "![](images/backpropagation2/output-neuron-backpropagation.svg)"
+    "![](https://tanaka-tom.github.io/backpropagation/computational-graph2-2.svg)\n",
+    "![](https://tanaka-tom.github.io/backpropagation2/output-neuron-backpropagation.svg)"
    ]
   },
   {
