--- a/neural-network-1/neural-network-1.ipynb
+++ b/neural-network-1/neural-network-1.ipynb
@@ -148,9 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -196,9 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -233,12 +229,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$XW=Y$$\n",
-    "\n",
-    "$$X=\\begin{pmatrix} { x }_{ 1 } & { x }_{ 2 } \\end{pmatrix}$$\n",
-    "\n",
-    "$$W=\\begin{pmatrix} 1 & 3 & 5 \\\\ 2 & 4 & 6 \\end{pmatrix}$$\n",
-    "\n",
+    "$$XW=Y$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$X=\\begin{pmatrix} { x }_{ 1 } & { x }_{ 2 } \\end{pmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$W=\\begin{pmatrix} 1 & 2 & 3 \\\\ 4 & 5 & 6 \\end{pmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "※(2017/10/23 訂正) 動画中では w = [[1,3,5],[2,4,6]] と表示されていますが、このニューラルネットワーク図の場合、正しくは w = [[1,2,3][4,5,6]] です。\n",
+    "[eizis tkchさんのコメント](https://www.youtube.com/watch?v=cUBf3g5tfKI&lc=z23qtdr4hkjozbxvbacdp432smm2bvqvowlen5msdrlw03c010c)による指摘で発覚しました。ご指摘ありがとうございます。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$Y=\\begin{pmatrix} { y }_{ 1 } & { y }_{ 2 } & { y }_{ 3 } \\end{pmatrix}$$"
    ]
   },
@@ -299,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
